--- a/Scratchpad.ipynb
+++ b/Scratchpad.ipynb
@@ -20,12 +20,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n"
+      "testing once again to make sure everything is working\n"
      ]
     }
    ],
    "source": [
-    "print (\"test\")"
+    "print (\"testing once again to make sure everything is working\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [],
    "metadata": {
